Work in Progress

--- a/To-Do-List/css/style.css
+++ b/To-Do-List/css/style.css
@@ -5,3 +5,11 @@
     color: white;
     background: #11EF09;
 }
+.container{
+    width:100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
